--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="root">
     </div>
+    <script src="./background.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
